--- a/index.html
+++ b/index.html
@@ -58,19 +58,47 @@
                 <ul class="progress-list">
                     <li>
                         <label class="left-label">Python</label>
-                        <progress value="80" max="100"></progress>
+                        <progress value="90" max="100"></progress>
                     </li>
                     <li>
                         <label class="left-label">R</label>
                         <progress value="70" max="100"></progress>
                     </li>
                     <li>
+                        <label class="left-label">C/C++</label>
+                        <progress value="60" max="100"></progress>
+                    </li>
+                    <li>
                         <label class="left-label">C#</label>
                         <progress value="60" max="100"></progress>
                     </li>
                     <li>
-                        <label class="left-label">机器学习</label>
+                        <label class="left-label">MATLAB</label>
                         <progress value="60" max="100"></progress>
+                    </li>
+                    <li>
+                        <label class="left-label">LabVIEW</label>
+                        <progress value="60" max="100"></progress>
+                    </li>
+                    <li>
+                        <label class="left-label">LaTeX</label>
+                        <progress value="60" max="100"></progress>
+                    </li>
+                    <li>
+                        <label class="left-label">Excel</label>
+                        <progress value="60" max="100"></progress>
+                    </li>
+                    <li>
+                        <label class="left-label">机器学习</label>
+                        <progress value="90" max="100"></progress>
+                    </li>
+                    <li>
+                        <label class="left-label">英语</label>
+                        <progress value="70" max="100"></progress>
+                    </li>
+                    <li>
+                        <label class="left-label">日语</label>
+                        <progress value="80" max="100"></progress>
                     </li>
                 </ul>
             </div>
