--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
                         <progress value="90" max="100"></progress>
                     </li>
                     <li>
+                        <label class="left-label">深度学习</label>
+                        <progress value="90" max="100"></progress>
+                    </li>
+                    <li>
                         <label class="left-label">英语</label>
                         <progress value="70" max="100"></progress>
                     </li>
@@ -126,13 +130,13 @@
                     <li>
                         <h3>南京邮电大学 - 自动化专业（本科）2010-2014</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                            在校期间成绩优异名列前茅，尤其在实践课程上有着突出表现。在班级和学院中人际关系融洽，同时也是老师的得力助手，曾分别担任过两年班长和一年团支书，期间积极组织团队活动并取得不错的反响。在社团活动中也有着不俗的成绩，曾分别担任过校网球队二队队长、一队队长、校网球协会部长，曾多次获得大学生网球赛一等奖。撰写毕业论文期间，积极与导师沟通不断锻炼自己的研究成果，最终被评为学院优秀论文。
                         </p>
                     </li>
 		    <li>
                         <h3>名古屋工业大学 - 计算机科学专业（硕士）2016-2018</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                            出国前以半年的时间学习日语并通过日本语能力测试达到N2水准, 2015年以研究生身份进入该校参与基础研究工作并准备院生（硕士）入学考试。同年8月以全科满分院内第一的名次考入该校计算机科学专业，并于2016年正式加入梅崎田口研究室从事多媒体与人机交互方向的研究。期间在国际自动控制联合会IFAC、日本計測自動制御学会SSI、日本人工知能学会全国大会JSAI、日本机器人学会RSJ等会议上发表过自己学术成果且获得良好的反响。
                         </p>
                     </li>
 
@@ -143,8 +147,8 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3>名古屋工业大学－助教</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        <h3>名古屋工业大学－教学助理</h3>
+                        <p>在校期间曾担任过两年情报工学实践演习课程的教学助理。该课程的内容是让学生以团队的形式合作完成一个自拟项目的开发，并以英文讨论和发表研究进度。作为助教，主要负责以下工作：检讨学生所构思的项目的可行性；在项目各个环节中提供必要的技术支持；辅导学生设计发表资料（PPT，动画等）；纠正学生英语用语的规范性等。
                         </p>
                     </li>
                     
@@ -157,20 +161,20 @@
                     <li>
                         <h3>相对位置概念的学习</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam。Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            。。。
                             <br/>
                         </p>
                     </li>
                     <li>
                         <h3>场所概念的学习</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            。。。
                         </p>
                     </li>
                     <li>
                         <h3>连续动作的二重解析</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            。。。
                         </p>
                     </li>
                 </ul>
@@ -182,27 +186,21 @@
                     <li>
                         <h3>小学生作文二等奖</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam。
+                            。。。
                         </p>
                     </li> 
                     <li>
                         <h3>曾获统一冰红茶“再来一瓶”奖</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam。
+                            。。。
                         </p>
-                    </li> 
-                    <li>
-                        <h3>这一行也是为了凑版面</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam。
-                        </p>
-                    </li>                     
+                    </li>                      
             </div>
             <div class="aboutme info-unit right-paragraph">
                 <h2 class="info-header"><i class="iconfont icon-flower"></i> <span class="info-title">自我评价</span></h2>
                 <hr>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    。。。
                 </p>
             </div>
         </div>
