--- a/index (copy).html
+++ b/index (copy).html
@@ -161,14 +161,14 @@
                     <li>
                         <h3>相对位置概念的学习</h3>
                         <p>
-                            <b>目的：</b>在agent不具备事前知识的情况下，通过人为提示，对“前后左右”等基于参照物的相对位置概念进行学习。<br><b>建模：</b>本人基于语义学中的“能指与所指”和“语义三角”构建了事物-概念-记号相互学习的非参贝叶斯冯氏分布（von Mises distribution）混合模型：以冯氏分布将相对位置信息（事物）模型化（概念化），在概念（所指）被无监督学习的同时找到语句中表示概念的记号（能指）并自动标注，同时对概念的数量自行推断。<br><b>推断：</b>在模型优化方面，本人采用了美特罗波利斯-黑斯廷斯算法（Metropolis–Hastings algorithm），一方面有效避免了局部最优问题，另一方面解决了冯氏分布中的集中度参数无闭式解的问题。
+                            该研究的目的是，在agent不具备事前知识的情况下，通过人为提示，对“前后左右”等基于参照物的相对位置概念进行学习。本人基于语义学中的“能指与所指”和“语义三角”构建了事物-概念-记号相互学习的非参贝叶斯冯氏分布（von Mises distribution）混合模型：以冯氏分布将相对位置信息（事物）模型化（概念化），在概念（所指）被无监督学习的同时找到语句中表示概念的记号（能指）并自动标注，而且能对概念的数量进行自行推断。在模型优化方面，本人采用了美特罗波利斯-黑斯廷斯算法（Metropolis–Hastings algorithm），一方面有效避免了局部最优问题，另一方面解决了冯氏分布中的集中度参数无闭式解的问题。
                             <br/>
                         </p>
                     </li>
                     <li>
                         <h3>连续动作的二重解析</h3>
                         <p>
-                            <b>目的：</b>对未经处理的连续动作数据进行“二重构造”的分割，以便agent的学习和模仿。<br><b>建模：</b>“二重构造”的思想来源于自然语言处理领域的无监督单词分割中被广泛应用的Nested Pitman-Yor Language Model，该模型同时考虑单词（上级单元）间的迁移概率和字母（下级单元）间的迁移概率对语句构成的影响。而有别于离散的文本数据，连续的动作数据本身并不存在如同字母一样显式的下级单元，因此本人采用了引入状态持续时间作为变量的HSMM模型，在对动作的上级单元进行分割的同时，通过状态持续时间的推断分割下级单元。<br><b>推断：</b>本人采用Blocked Gibbs Sampler优化模型，并以并行计算的方式降低组合数过多导致的时间损耗。
+                            该研究的目的是，对未经处理的连续动作数据进行“二重构造”的分割，以便于agent的学习和模仿。“二重构造”的思想来源于自然语言处理领域的无监督单词分割中被广泛应用的Nested Pitman-Yor Language Model，该模型同时考虑单词（上级单元）间的迁移概率和字母（下级单元）间的迁移概率对语句构成的影响，大量实验结果表明，此类构造相较于只考虑单词间关系的手法拥有更好的效果。而有别于离散的文本数据，连续的动作数据本身并不存在如同字母一样显式的下级单元，因此本人采用了引入状态持续时间作为变量的HSMM模型，在对动作的上级单元进行分割的同时，通过状态持续时间的推断分割下级单元。本人采用Blocked Gibbs Sampler优化模型，并以并行计算的方式降低组合数过多导致的时间损耗。
                         </p>
                     </li>
                 </ul>
@@ -177,7 +177,7 @@
                 <h2 class="info-header"><i class="iconfont icon-flower"></i> <span class="info-title">自我评价</span></h2>
                 <hr>
                 <p>
-                    <br>学习上：<br><br>研究上：<br><br>工作上：<br><br>生活上：
+                    学习上：<br><br>研究上：<br><br>工作上：<br><br>人际上：<br><br>生活上：
 
                 </p>
             </div>
