--- a/index.html
+++ b/index.html
@@ -16,15 +16,9 @@
     <div class="container" id="cv">
         <div class="side">
             <div class="me">
-                <div class="portrait"></div>
-                <div class="remodal remodal-img" data-remodal-id="portrait-modal">
-                    <h3>请输入图片URL地址：</h3>
-                    <br/>
-                    <input type="text" id="avatar-url">
-                    <button data-remodal-action="confirm" class="remodal-confirm">确定</button>
-                </div>
+                <div class="portrait" style="background-image: url(&quot;https://raw.githubusercontent.com/GUZHIXIANG/CV/master/static/image/Myphoto.jpg&quot;);"></div>
                 <h1 id="username" >Gu</h1>
-                <h4 id="persona-tag" >机器学习 / 认知科学 / 人工智能</h4>
+                <h4 id="persona-tag" >机器学习 / 数据分析 / 人工智能</h4>
             </div>
             <div class="profile info-unit">
                 <h2 class="info-header"><i class="iconfont icon-person"></i> <span class="info-title">基本信息</span></h2>
@@ -61,12 +55,8 @@
                         <progress value="85" max="100"></progress>
                     </li>
                     <li>
-                        <label class="left-label">C/C++</label>
-                        <progress value="50" max="100"></progress>
-                    </li>
-                    <li>
-                        <label class="left-label">C#</label>
-                        <progress value="55" max="100"></progress>
+                        <label class="left-label">ROS</label>
+                        <progress value="70" max="100"></progress>
                     </li>
                     <li>
                         <label class="left-label">MATLAB</label>
@@ -74,7 +64,7 @@
                     </li>
                     <li>
                         <label class="left-label">LabVIEW</label>
-                        <progress value="75" max="100"></progress>
+                        <progress value="65" max="100"></progress>
                     </li>
                     <li>
                         <label class="left-label">R</label>
@@ -97,6 +87,10 @@
                         <progress value="80" max="100"></progress>
                     </li>
                     <li>
+                        <label class="left-label">强化学习</label>
+                        <progress value="75" max="100"></progress>
+                    </li>
+                    <li>
                         <label class="left-label">英语</label>
                         <progress value="75" max="100"></progress>
                     </li>
@@ -111,7 +105,7 @@
                 <h2 class="info-header"><i class="iconfont icon-weixin"></i> <span class="info-title">个人微信</span></h2>
                 <hr>
                 <div class="weixin">
-                    <img src="static/image/weixin.png" alt="">
+                    <img src="static/image/Myweixin.jpg" alt="">
 
                 </div>
             </div>
@@ -130,55 +124,68 @@
                     <li>
                         <h3>南京邮电大学 - 自动化专业（本科）2010-2014</h3>
                         <p>
-                            在校期间成绩优异名列前茅，尤其在实践课程上有着突出表现。在班级和学院中人际关系融洽，同时也是老师的得力助手，曾分别担任过两年班长和一年团支书，期间积极组织团队活动并取得不错的反响。在社团活动中也有着不俗的成绩，曾分别担任过校网球队二队队长、一队队长、校网球协会部长，曾多次获得大学生网球赛一等奖。撰写毕业论文期间，积极与导师沟通不断锻炼自己的研究成果，最终被评为学院优秀论文。
+                            在校期间成绩优异名列前茅，尤其在实践课程上有着突出表现。在班级和学院中人际关系融洽，同时也是老师的得力助手，曾分别担任过两年班长和一年团支书，期
+间积极组织团队活动并取得不错的反响。在社团活动中也有着不俗的成绩，曾分别担任过校网球队二队队长、一队队长、校网球协会部长，曾多次获得大学生网球赛
+一等奖。撰写毕业论文期间，积极与导师沟通不断锻炼自己的研究成果，最终被评为学院优秀论文。
                         </p>
                     </li>
 		    <li>
                         <h3>名古屋工业大学 - 计算机科学专业（硕士）2016-2018</h3>
                         <p>
-                            出国前以半年的时间学习日语并通过日本语能力测试达到N2水准, 2015年以研究生身份进入该校参与基础研究工作并准备院生（硕士）入学考试。同年8月以全科满分院内第一的名次考入该校计算机科学专业，并于2016年正式加入梅崎田口研究室从事多媒体与人机交互方向的研究。期间在国际自动控制联合会IFAC、日本计测自动控制学会SSI、日本人工智能学会全国大会JSAI、日本机器人学会RSJ等会议上发表过自己学术成果且获得良好的反响。
+                           出国前以半年的时间学习日语并通过日本语能力测试达到N2水准, 
+2015年以研究生身份进入该校参与基础研究工作并准备院生（硕士）入学考试。同年8月以全科满分院内第一的名次考入该校计算机科学专业，并于2016年
+正式加入梅崎田口研究室从事多媒体与人机交互方向的研究。期间在国际自动控制联合会IFAC、日本计测自动控制学会SSI、日本人工智能学会全国大会
+JSAI、日本机器人学会RSJ等会议上发表过自己学术成果且获得良好的反响。
                         </p>
                     </li>
-
                 </ul>
             </div>
+
             <div class="work info-unit right-list">
                 <h2 class="info-header"><i class="iconfont icon-work"></i> <span class="info-title">工作经历</span></h2>
                 <hr>
                 <ul class="experience-list">
                     <li>
                         <h3>名古屋工业大学－教学助理</h3>
-                        <p>在校期间曾担任过两年情报工学实践演习课程的教学助理。该课程的内容是让学生以团队的形式合作完成一个自拟项目的开发，并以英文讨论和发表研究进度。本人作为助教主要负责以下工作：检讨学生所构思的项目的可行性；在项目各个环节中提供必要的技术支持；辅导学生设计发表资料（PPT，动画等）；纠正学生英文用语的规范性等。
+                        <p>在校期间曾担任过两年情报工学实践演习课程的教
+学助理。该课程的内容是让学生以团队的形式合作完成一个自拟项目的开发，并以英文讨论和发表研究进度。本人作为助教主要负责以下工作：检讨学生所构思的项
+目的可行性；在项目各个环节中提供必要的技术支持；辅导学生设计发表资料（PPT，动画等）；纠正学生英文用语的规范性等。
                         </p>
                     </li>
-                    
                 </ul class="experience-list">
             </div>
+
             <div class="project info-unit right-list">
                 <h2 class="info-header"><i class="iconfont icon-project"></i> <span class="info-title">个人项目</span></h2>
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3>相对位置概念的学习</h3>
+                        <h3>相对位置概念的学习问题</h3>
                         <p>
-                            <b>目的：</b>在agent不具备事前知识的情况下，通过人为提示，对“前后左右”等基于参照物的相对位置概念进行学习。<br><b>建模：</b>本人基于语义学中的“能指与所指”和“语义三角”构建了事物-概念-记号相互学习的非参贝叶斯冯氏分布（von Mises distribution）混合模型：以冯氏分布将相对位置信息（事物）模型化（概念化），在概念（所指）被无监督学习的同时找到语句中表示概念的记号（能指）并自动标注，同时对概念的数量自行推断。<br><b>推断：</b>在模型优化方面，本人采用了美特罗波利斯-黑斯廷斯算法（Metropolis–Hastings algorithm），一方面有效避免了局部最优问题，另一方面解决了冯氏分布中的集中度参数无闭式解的问题。
+                           <b>目的：</b>在agent不具备事前知识的情况下，通过人为提示，对“前后左右”等基于参照物的相对位置概念进行学习。<br><b>建模：</b>本
+人基于语义学中的“能指与所指”和“语义三角”构建了事物-概念-记号相互学习的非参贝叶斯冯氏分布混合模型：以冯氏分布将相对位置信息（事物）模型化（概念化），在概念（即所指）被无监督学习的同时推断语句中表示概念的记号
+（即能指）并自动标注，同时对概念的数量自行推断。<br><b>推断：</b>在模型优化方面，本人采用了Metropolis–Hastings algorithm，一方面有效避免了局部最优问题，另一方面解决了冯氏分布中的集中度参数无闭式解的问题。<br><b>成果：</b>该项目在思想上的突破备受关注，成为了研究室最具代表性的研究课题之一。
                             <br/>
                         </p>
                     </li>
                     <li>
-                        <h3>连续动作的二重解析</h3>
+                        <h3>连续动作的二重分割问题</h3>
                         <p>
-                            <b>目的：</b>对未经处理的连续动作数据进行“二重构造”的分割，以便agent的学习和模仿。<br><b>建模：</b>“二重构造”的思想来源于自然语言处理领域的无监督单词分割中被广泛应用的Nested Pitman-Yor Language Model，该模型同时考虑单词（上级单元）间的迁移概率和字母（下级单元）间的迁移概率对语句构成的影响。而有别于离散的文本数据，连续的动作数据本身并不存在如同字母一样显式的下级单元，因此本人采用了引入状态持续时间作为变量的HSMM模型，在对动作的上级单元进行分割的同时，通过状态持续时间的推断分割下级单元。<br><b>推断：</b>本人采用Blocked Gibbs Sampler优化模型，并以并行计算的方式降低组合数过多导致的时间损耗。
+                             <b>目的：</b>对未经处理的连续动作数据进行“二重构造”的分割，以便agent的学习和模仿。<br><b>建模：</b>“二
+重构造”的思想来源于自然语言处理领域的无监督单词分割中被广泛应用的Nested Pitman-Yor Language 
+Model，该模型同时考虑单词（上级单元）间的迁移概率和字母（下级单元）间的迁移概率对语句构成的影响。而有别于离散的文本数据，连续的动作数据本身
+并不存在如同字母一样显式的下级单元，因此本人采用了引入状态持续时间作为变量的HSMM模型，在对动作的上级单元进行分割的同时，通过状态持续时间的推
+断分割下级单元。<br><b>推断：</b>本人采用Blocked Gibbs Sampler优化模型，并以并行计算的方式降低组合数过多导致的时间损耗。<br><b>成果：</b>该项目验证了二重构造在连续信号上应用的可行性，相关技术被沿用于后续的语音识别，行为识别等课题中。
                         </p>
                     </li>
                 </ul>
             </div>
+           
             <div class="aboutme info-unit right-paragraph">
                 <h2 class="info-header"><i class="iconfont icon-flower"></i> <span class="info-title">自我评价</span></h2>
                 <hr>
                 <p>
-                    <br>学习上：<br><br>研究上：<br><br>工作上：<br><br>生活上：
-
+                    热衷于机器学习，熟悉深度学习、强化学习，能够熟练运用Python语言实现各类学习方法以解决问题；了解人工智能相关的理论和算法；具备良好的数学功底，熟练掌握微积分、线性代数和概率论的相关知识，熟悉变分学，了解测度论，群论，圈论；逻辑清晰，沟通能力强，重视团队合作；希望在未来1年内将自己所学以及构想发挥于实践并成为机器学习工程师，3年内能够具备带领团队完成大型项目的能力，5年内能够将知识体系融会贯通从事前瞻性研究。
                 </p>
             </div>
         </div>
