--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <li>
                         <h3>南京邮电大学 - 自动化专业（本科）2010-2014</h3>
                         <p>
-                            在校期间成绩优异名列前茅，尤其在实践课程上有着突出表现。在班级和学院中人际关系融洽，同时也是老师的得力助手，曾分别担任过两年团支书，期
+                            在校期间成绩优异名列前茅，尤其在实践课程上有着突出表现。在班级和学院中人际关系融洽，同时也是老师的得力助手，曾担任过两年团支书，期
 间积极组织团队活动并取得不错的反响。在社团活动中也有着不俗的成绩，曾分别担任过校网球队二队队长、一队队长、校网球协会部长，曾多次获得大学生网球赛
 一等奖。撰写毕业论文期间，积极与导师沟通不断锻炼自己的研究成果，最终被评为学院优秀论文。
                         </p>
